tests/instantiating/width_invalid_type/stderr.golden
error: width property must be of type integer, current type float
bus.fbd +2:21
   |
 2 |   C config; width = 10.12
   |                     ^^^^^
